tests/ui/codemap_tests/tab_2.stderr
error[E0765]: unterminated double quote string
  --> $DIR/tab_2.rs:4:7
   |
LL |                   """;
   |  ___________________^
<<<<<<< HEAD
...  |
LL | | // String Literals
   | |__________________^
=======
LL | | }
   | |__^
>>>>>>> pull-upstream-temp--do-not-use-for-real-code

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
